# hzfind

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
assets/: hetzner_cloud.json  passmark.json
benchmarks/: CCX33.md  CCX33.yaml
src/: hetzner_auction.rs  hetzner_cloud.rs  lib.rs  list.rs  list_stats.rs  main.rs  passmark.rs  tui.rs
