[package]
name = "hzfind"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
eyre = "0.6.12"
futures = { version = "0.3.32", features = ["executor"] }
num-format = "0.4.4"
open = "5.3.3"
ratatui = { version = "0.30.0", features = ["crossterm"] }
regex = "1.12.3"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }

[[bin]]
name = "hzfind"
path = "src/main.rs"

